--- a/template_header.html
+++ b/template_header.html
@@ -19,6 +19,7 @@
 	<!--[if lt IE 9]>
 		<link rel="stylesheet" href="[[++site_url]]assets/templates/foundation_modx/stylesheets/ie.css">
 	<![endif]-->
+	<script src="[[++site_url]]assets/templates/foundation_modx/javascripts/respond.min.js"></script>
 	<!-- IE Fix for HTML5 Tags -->
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
