--- a/template_basic_page.html
+++ b/template_basic_page.html
@@ -1,7 +1,7 @@
 [[$template_header]]
-		<section class="row">
+		<div class="row">
 			<div class="twelve columns">
 				[[*content]]
 			</div>
-		</section>
+		</div>
 [[$template_footer]]
