--- a/template_footer.html
+++ b/template_footer.html
@@ -3,10 +3,31 @@
 				[[$footer_content]]
 			</div>
 		</footer>
+	<!-- END .container div -->
 	</div>
-	<script src="[[++site_url]]assets/templates/foundation_modx/javascripts/jquery.min.js"></script>
-	<script src="[[++site_url]]assets/templates/foundation_modx/javascripts/modernizr.foundation.js"></script>
-	<script src="[[++site_url]]assets/templates/foundation_modx/javascripts/foundation.js"></script>
-	<script src="[[++site_url]]assets/templates/foundation_modx/javascripts/app.js"></script>
+	<!-- Included JS Files (Uncompressed) -->
+	<!--
+	<script src="assets/templates/foundation_modx/javascripts/jquery.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.mediaQueryToggle.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.forms.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.reveal.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.orbit.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.navigation.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.buttons.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.tabs.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.tooltips.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.accordion.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.placeholder.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.alerts.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.topbar.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.joyride.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.clearing.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/jquery.foundation.magellan.js"></script>
+	-->
+	<!-- Included JS Files (Compressed) -->
+	<script src="assets/templates/foundation_modx/javascripts/jquery.js"></script>
+	<script src="assets/templates/foundation_modx/javascripts/foundation.min.js"></script>
+	<!-- Initialize JS Plugins -->
+	<script src="assets/templates/foundation_modx/javascripts/app.js"></script>
 </body>
 </html>
